--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.suffix:.jsp
 
 
 #POŁĄCZENIE Z BAZĄ DANYCH
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/warsztaty08?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=coderslab
